--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0"
   }
 }
