--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "TUI",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/lib/index",
+  "main": "dist/lib/index.js",
   "types": "dist/lib/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js"
   },
@@ -21,11 +21,17 @@
   },
   "homepage": "https://github.com/YjjTT/tao-test#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-jest": "^24.9.0",
     "cross-env": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.9.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
