--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "react-test-renderer": "^16.9.0",
+    "svg-sprite-loader": "^4.1.6",
     "ts-jest": "^24.0.2",
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
