--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "noUnusedLocals": true
     },
     "include": [
+      "types/**/*",
+      "lib/**/*"
     ],
     "exclude": [
       "node_modules",
