--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-test-renderer": "^16.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.9.0",
+    "babel-preset-react-app": "^9.0.1",
     "cross-env": "^5.2.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
