修改 jest-junit 输出文件名再次

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT_DIR=./test-results/jest jest --config=jest.config.js"
   },
   "jest-junit": {
-    "outputName": "result.xml"
+    "outputName": "results.xml"
   },
   "repository": {
     "type": "git",
