--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "TUI",
-  "version": "1.0.0",
+  "name": "taotestui",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index",
+  "files": ["/dist"],
   "scripts": {
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
@@ -25,12 +26,12 @@
   },
   "homepage": "https://github.com/YjjTT/tao-test#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-test-renderer": "^16.9.0",
+  "@babel/preset-env": "^7.6.0",
+  "@babel/preset-react": "^7.0.0",
+  "@types/jest": "^24.0.18",
+  "@types/react": "^16.9.2",
+  "@types/react-dom": "^16.9.0",
+  "@types/react-test-renderer": "^16.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.9.0",
     "babel-preset-react-app": "^9.0.1",
