--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,12 +43,13 @@ jobs:
           at: .
       - run: yarn ci
       - store_test_results:
-          path: test-results
+          path: test-results￿
   publish:
     <<: *defaults
     steps:
       - attach_workspace:
           at: .
+      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npm publish
 workflows:
   version: 2
