--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
+      - run: ls -la
       - run: yarn ci
       - store_test_results:
           path: test-results￿
