--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: ls -l
-      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+#      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npm publish
 workflows:
   version: 2
