--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: ls -l
+#      - run: ls -l
 #      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
       - run: npm publish
 workflows:
