--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,6 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
-#      - run: ls -la
       - run: yarn ci
       - store_test_results:
           path: test-results￿
@@ -50,9 +49,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-#      - run: ls -l
-#      - run: npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-      - run: npm publish
+      - run: yarn publish
 workflows:
   version: 2
   build_accept_deploy:
