--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "file-loader": "^4.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.0",
