--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "node-sass": "^4.12.0",
+    "prism-react-renderer": "^1.0.0",
+    "raw-loader": "^3.1.0",
     "react-test-renderer": "^16.9.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
