--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "node-sass": "^4.12.0",
-    "prism-react-renderer": "^1.0.0",
+    "prism-react-renderer": "0.1.6",
     "raw-loader": "^3.1.0",
     "react-test-renderer": "^16.9.0",
     "sass-loader": "^8.0.0",
